--- a/config.toml
+++ b/config.toml
@@ -2,6 +2,7 @@ baseurl = "http://guizcarl.freeboxos.fr:8887"
 title = "Studio réalité"
 theme = "hugo-creative-portfolio-theme"
 languageCode = "en-us"
+publishDir="docs"
 # Enable comments by entering your Disqus shortname
 disqusShortname = ""
 # Enable Google Analytics by entering your tracking code
