--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ jobs:
       - run: HUGO_ENV=production hugo -v -d $HUGO_BUILD_DIR
 
       # Set some variables to add to the commit message
-      - run: git config --global user.email "noreply@example.com" && git config --global user.name "CircleCI Bot"
+      - run: git config --global user.email "hello@xn--studioralit-hbbe.com" && git config --global user.name "CircleCI Bot"
 
       # Push the generated files back to github
       - run: cd $HUGO_BUILD_DIR && git add --all && git commit -m "Automated publish to gh-pages [ci skip]" && git push
