--- a/config.toml
+++ b/config.toml
@@ -1,8 +1,7 @@
-baseurl = "http://guizcarl.freeboxos.fr:8887"
+baseurl = "https://studiorealite.github.io/website/"
 title = "Studio réalité"
 theme = "hugo-creative-portfolio-theme"
 languageCode = "en-us"
-publishDir="docs"
 # Enable comments by entering your Disqus shortname
 disqusShortname = ""
 # Enable Google Analytics by entering your tracking code
